fixed layout bug

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -3,7 +3,7 @@
 .page-header {
     background-color: ;
     margin-top: 0;
-    padding: 20px 20px 5px 20px;
+    padding: 20px 20px 20px 20px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -63,6 +63,6 @@ color : darkred;
 	font-size : 18pt;
 	position : relative;
 	margin-left : 145px;
-	margin-top : -45px;
+	margin-top : -50px;
 	color : grey;
 }
